<resources>
    <string name="app_name">LokaCar</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login :</string>
    <string name="filtrer">Filtrer</string>


    <!-- TITLES -->
    <string name="TitleMainActivity">Liste des vehicules</string>
    <string name="TitleLouerActivity">Location d\'un vehicule</string>
    <string name="TitleAddCarActivity">Ajout d\'un vehicule</string>
    <string name="TitleLoginActivity">Connexion</string>
    <string name="TitleRetourActivity">Retour d\'un vehicule</string>
    <string name="TitleFiltrerActivity">Filtrer les vehicules</string>
    <string name="TitleStatsActivity">Chiffres d\'affaires</string>

    <!-- BUTTONS -->
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="rechercher">Rechercher</string>

    <!-- LOCATION STRINGS -->
    <string name="informations_client">Informations Client</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="telephone">Téléphone :</string>
    <string name="e_mail">E-mail :</string>
    <string name="adresse">Adresse :</string>
    <string name="libl_chargement">CHARGEMENT</string>

    <!-- ADD CAR STRINGS-->
    <string name="ajoutVehicule">Ajout d\'un vehicule</string>
    <string name="denomination">Dénomination</string>
    <string name="immatriculation">Immatriculation</string>
    <string name="marque">Marque</string>
    <string name="typeCarburant">Type de Carburant</string>
    <string name="typeVehicule">Type de Vehicule</string>
    <string name="kilometrage">Kilométrage</string>
    <string name="ajouterPhoto">Ajouter une photo</string>
    <string name="prixJour">Prix à la journée</string>
    <string name="etatVehicule">Est loué ?</string>
</resources>
