<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="0.3"
                    android:background="#4A148C" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/marque"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="marque"
                        android:textColor="@color/colorPrimary700" />

                    <TextView
                        android:id="@+id/designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="designation"
                        android:textColor="@color/colorPrimary700" />

                    <TextView
                        android:id="@+id/typeCarburant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="typeCarburant"
                        android:textColor="@color/colorPrimary700" />

                    <TextView
                        android:id="@+id/typeVehicule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="typeVehicule"
                        android:textColor="@color/colorPrimary700" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/immatriculation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="immatriculation"
                        android:textColor="@color/colorPrimary700" />

                    <TextView
                        android:id="@+id/kilometrage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="kilometrage"
                        android:textColor="@color/colorPrimary700" />

                    <TextView
                        android:id="@+id/prixJour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="prixJour"
                        android:textColor="@color/colorPrimary700" />
                </LinearLayout>


            </LinearLayout>

            <include layout="@layout/horizontal_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/informations_client"
                    android:textAlignment="center"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_form"
                    android:paddingRight="@dimen/padding_form">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:text="@string/nom" />

                    <EditText
                        android:id="@+id/clientNom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_form"
                    android:paddingRight="@dimen/padding_form">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:text="@string/prenom" />

                    <EditText
                        android:id="@+id/clientPrenom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_form"
                    android:paddingRight="@dimen/padding_form">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:text="@string/telephone" />

                    <EditText
                        android:id="@+id/clientTel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="phone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_form"
                    android:paddingRight="@dimen/padding_form">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:text="@string/e_mail" />

                    <EditText
                        android:id="@+id/clientEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_form"
                    android:paddingRight="@dimen/padding_form">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:text="@string/adresse" />

                    <EditText
                        android:id="@+id/clientAdresse"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_form"
                    android:paddingRight="@dimen/padding_form">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:text="Code postal : " />

                    <EditText
                        android:id="@+id/clientCp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_form"
                    android:paddingRight="@dimen/padding_form">

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="right"
                        android:text="Ville : " />

                    <EditText
                        android:id="@+id/clientVille"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="text" />
                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/horizontal_line"/>

            <LinearLayout
                android:id="@+id/layoutPictures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:onClick="addPhotoLouer"
                        android:background="@drawable/shape_button"
                        android:text="Ajouter une photo de départ" />
                </RelativeLayout>

            </LinearLayout>

            <include layout="@layout/horizontal_line"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_button"
                    android:onClick="validerLouer"
                    android:text="Valider" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>